<resources>
    <string name="app_name">Car Loan Calculator</string>
    <string name="car_price">Vehicle Price :</string>
    <string name="down_payment">Down Payment :</string>
    <string name="loan_period">Loan period (year) :</string>
    <string name="interest_rate">Interest Rate :</string>
    <string name="monthly">Monthly repayment :</string>
    <string name="calculate">Calculate</string>
    <string name="loan">Car Loan :</string>
    <string name="interest">Interest :</string>
</resources>
