<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="roboto"
        android:text="@string/app_name"
        android:textSize="@dimen/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/subTitleWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/car_price"
        android:textSize="@dimen/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/subTitleWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/down_payment"
        android:textSize="@dimen/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/subTitleWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/interest_rate"
        android:textSize="@dimen/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/subTitleWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/loan_period"
        android:textSize="@dimen/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/car_price"
        android:layout_width="@dimen/subTitleWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/down_payment"
        android:layout_width="@dimen/subTitleWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/car_price" />

    <EditText
        android:id="@+id/rate"
        android:layout_width="@dimen/subTitleWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/down_payment" />

    <EditText
        android:id="@+id/load_period"
        android:layout_width="@dimen/subTitleWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/rate" />

    <Button
        android:id="@+id/btnCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="@dimen/resultWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/monthly"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCal"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="@dimen/resultWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/interest"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="@dimen/resultWidth"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/loan"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/result1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/btnCal"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/result2"
        android:layout_width="0dp"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/result1"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/result3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/subTitleHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/result2"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>